--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </button>
           </div>
         </div>
-        <div class="top-nav border">
+        <div class="top-nav">
           <div>Rohit Pandey</div>
           <div>Projects</div>
           <div>Guidance</div>
@@ -163,7 +163,7 @@
             </li>
           </ul>
           <div class="list-group-wrapper row container-fluid">
-            <div class="list eft-list col-sm-4 ">
+            <div class="list eft-list col-xs-4 ">
               <h4>Strengths</h4>
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -183,7 +183,7 @@
                 </li>
               </ul>
             </div>
-            <div class="list middle-list col-sm-4">
+            <div class="list middle-list col-xs-4">
               <h4>Goals</h4>
               <ul class=" list list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -200,7 +200,7 @@
                 </li>
               </ul>
             </div>
-            <div class="right-list col-sm-4">
+            <div class="right-list col-xs-4">
               <h4>Intreast Areas</h4>
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
