--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rohit</title>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+  <link rel="shortcut icon" type="image" href="./favicon.ico"/>
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <link rel="stylesheet" href="./background.css">
   <link rel="stylesheet" href="./index.css">
@@ -71,7 +72,7 @@
      <div class="shooting-stars"></div>
      <!-- <div id='title' class="shift">
          <span class="shift"> 
-           @Rohit__Pandey
+           Rohit__Pandey
            <br>
            <small class="under-text">Generous-EasyGoing-Wise-Cool</small>
         </span>
@@ -131,7 +132,7 @@
           </p>
           <p>
             <h4>Note </h4>
-            It's up to you what you consider good or bad i'm just listing mine and leaving@ judgement@ in you court @spell, Please tell
+            It's up to you what you consider good or bad i'm just listing mine and leaving judgement in you court spell, Please tell
             me if something i'm missing.
           </p>
           <h3>My Qualities</h3>
@@ -251,7 +252,7 @@
           <br>
           <h4>Example for understanding how learning on your own could be!</h4>
           <p>
-            Let's say you recently saw recruitment@ process and in it, most important part was problem solving so now you have decided@
+            Let's say you recently saw recruitment process and in it, most important part was problem solving so now you have decided
             to start leaning data structures and algorithms.<br>
             
             <div class="path-list">
@@ -298,7 +299,7 @@
             </h1>
             <p>
               Machine learning is very booming these days so every budy is learing it 
-              and preparing for the rat race, Obviously@ they are not doing it the right
+              and preparing for the rat race, Obviously they are not doing it the right
               way because almost every one is just trying to do things just from top.
               what they should be doing is understanding mathematics behind it.
 
