added some styling

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
           </div>
         </div>
         <div class="top-nav">
-          <div>Rohit Pandey</div>
+          <div style="padding:3%;background-color: tomato; color:white;">Rohit</div>
           <div>Projects</div>
           <div>Guidance</div>
-          <div>My Blogs</div>
+          <div>Blogs</div>
         </div>
        
 <!-- Right Content  -->
